src/objects/User_Input__e.object
<CustomObject>
    <fields>
        <fullName>Exit_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exit Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filtered_Email__c</fullName>
        <label>Filtered Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtered_Name__c</fullName>
        <label>Filtered Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitorId__c</fullName>
        <label>VisitorId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>User Input</label>
    <pluralLabel>User Inputs</pluralLabel>
</CustomObject>